--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,41 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .globle_container{
   width: 100vw;
   height: 100vh;
@@ -46,18 +11,86 @@
   /* border: 2px solid black; */
 }
 
+.globle_blur_container{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(243, 245, 247, 0.525);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  z-index: 5;
+  border-radius: inherit;
+}
+
+
+
+.globle_bg{
+  background: #fff url(./../component/Shared/Assets/background-image.jpg) center center/cover no-repeat;
+}
+
 .main_container{
-  width: 100vw;
-  height: 95vh;
+  width: 100%;
+  height: 92%;
   overflow-y: auto;
   overflow-x: hidden;
   background-color: aliceblue;
-  /* border: 2px solid black; */
+  /* border: 5px solid black; */
+}
+
+h1 .h2 .h3 .h4 .h5 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+p{
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+label{
+  font-size: 14px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 10px 0px 5px 0px;
 }
 
 input{
-  border: 1px solid rgb(4, 70, 70);
-  padding : 0.3rem;
-  border-radius: 5px;
+  padding: 6px 25px;
   width: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid rgb(32, 90, 90);
+}
+
+input:focus{
+  outline: 3px solid rgba(103, 168, 166, 0.556);
+  border-radius: 3px;
+  border: none;
+}
+
+.input-logo{
+  position: absolute;
+  left: 4px;
+  top: 4px;
+}
+
+.input-eye{
+  position: absolute;
+  right: 5px;
+  top: 4px;
+}
+
+select{
+  padding: 6px 5px;
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid rgb(32, 90, 90);
+}
+
+select:focus{
+  outline: 3px solid rgba(103, 168, 166, 0.556);
+  border-radius: 3px;
+  border: none;
 }
