--- a/src/component/Layout/style/Topbar.scss
+++ b/src/component/Layout/style/Topbar.scss
@@ -1,5 +1,10 @@
-.topbar-container{
-    width: 100vw;
-    height: 5vh;
-    background-color: rgb(216, 243, 234);
+.topbar-container {
+    width: 100%;
+    height: 8%;
+    background: rgb(15, 70, 116);
+    background: linear-gradient(90deg, rgba(15, 70, 116, 1) 0%, rgba(13, 134, 135, 1) 51%, rgba(15, 70, 116, 1) 100%);
+    color: white;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
 }
