--- a/src/component/Login/Login.scss
+++ b/src/component/Login/Login.scss
@@ -1,44 +1,146 @@
-.login-container{
-    border: 2px solid rgb(7, 123, 123);
-    padding : 4rem;
+.login-container {
+    border: 1px solid rgb(7, 123, 123);
+    padding: 2rem;
+    min-width: 25%;
+    max-width: fit-content;
     border-radius: 10px;
+    background-color: white;
+    -webkit-box-shadow: 23px 21px 60px -9px rgba(32, 133, 133, 1);
+    -moz-box-shadow: 23px 21px 60px -9px rgba(32, 133, 133, 1);
+    box-shadow: 23px 21px 60px -9px rgba(32, 133, 133, 1);
+    animation: loginAnim 1s ease 0s 1 normal forwards;
+    position: relative;
 
-    .login-button{
-        width: 9rem;
+    .login-title {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+
+
+    .login-button {
+        width: 100%;
         height: 2.5rem;
         background-color: rgb(21, 191, 191);
-        border-radius: 15px;
-        border: 2px solid rgb(7, 123, 123);
+        border-radius: 5px;
+        border: 1px solid rgb(7, 123, 123);
         color: white;
         font-weight: bold;
         font-size: 18px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
-    .login-button:hover{
+    .login-button:hover {
         background-color: rgb(190, 237, 237);
         font-weight: bold;
         color: rgb(7, 123, 123);
-        text-shadow: 2px 2px 4px rgb(109, 108, 108);
     }
 
 
-    .signup-button{
+
+
+    .signup-button {
         width: 6rem;
         height: 2rem;
         background-color: rgb(223, 15, 157);
-        border-radius: 10px;
-        border: 1px solid rgb(108, 8, 77);
+        border-radius: 4px;
+        border: none;
         color: rgb(241, 241, 241);
-        font-size: 13px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    .signup-button:hover{
-        background-color: rgb(239, 114, 199);
+        font-size: 12px;
         font-weight: bold;
-        text-shadow: 2px 2px 4px black;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
-    
+    .signup-button:hover {
+        background-color: rgb(108, 8, 77);
+        font-weight: bold;
+    }
+
+
+}
+
+.sign-container {
+    border: 1px solid rgb(7, 123, 123);
+    padding: 2rem;
+    min-width: 30%;
+    max-width: fit-content;
+    max-height: 95%;
+    border-radius: 10px;
+    background-color: white;
+    -webkit-box-shadow: 23px 21px 60px -9px rgba(32, 133, 133, 1);
+    -moz-box-shadow: 23px 21px 60px -9px rgba(32, 133, 133, 1);
+    box-shadow: 23px 21px 60px -9px rgba(32, 133, 133, 1);
+    animation: loginAnim 1s ease 0s 1 normal forwards;
+    overflow-y: auto;
+    position: relative;
+
+
+    .login-title {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+
+
+    .login-button {
+        position: absolute;
+        right: 2%;
+        top: 2%;
+        width: fit-content;
+        border-radius: 5px;
+        border: none;
+        color: rgb(21, 191, 191);
+        font-weight: bold;
+        font-size: 16px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .login-button:hover {
+        background-color: rgb(190, 237, 237);
+        font-weight: bold;
+        color: rgb(7, 123, 123);
+    }
+
+
+
+
+    .signup-button {
+        width: 100%;
+        height: 2.5rem;
+        background-color: rgb(223, 15, 157);
+        border-radius: 4px;
+        border: none;
+        color: rgb(241, 241, 241);
+        font-size: 14px;
+        font-weight: bold;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .signup-button:hover {
+        background-color: rgb(108, 8, 77);
+        font-weight: bold;
+    }
+
+
+}
+
+
+.sign-container::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.sign-container {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+@keyframes loginAnim {
+    0% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
